minikube/influxdb2/template.yaml
---
# Source: influxdb2/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: picasa-influxdb2
  labels:
    app.kubernetes.io/name: influxdb2
    helm.sh/chart: influxdb2-2.0.10
    app.kubernetes.io/instance: picasa
    app.kubernetes.io/version: "2.1.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8086

  selector:
    app.kubernetes.io/name: influxdb2
    app.kubernetes.io/instance: picasa
---
# Source: influxdb2/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: picasa-influxdb2
  labels:
    
    app.kubernetes.io/name: influxdb2
    helm.sh/chart: influxdb2-2.0.10
    app.kubernetes.io/instance: picasa
    app.kubernetes.io/version: "2.1.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: influxdb2
      app.kubernetes.io/instance: picasa
  serviceName: "picasa-influxdb2"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: influxdb2
        app.kubernetes.io/instance: picasa
      annotations:
        {}
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: picasa-influxdb2
      serviceAccountName: picasa-influxdb2
      containers:
        - name: influxdb2
          image: "influxdb:2.1.1-alpine"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8086
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
          - name: data
            mountPath: /var/lib/influxdb2
            subPath: 
          resources:
            {}
---
# Source: influxdb2/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: picasa-influxdb2
  labels:
    app.kubernetes.io/name: influxdb2
    helm.sh/chart: influxdb2-2.0.10
    app.kubernetes.io/instance: picasa
    app.kubernetes.io/version: "2.1.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    {}
spec:
  ingressClassName: nginx
  rules:
  - host: influxdb.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: picasa-influxdb2
            port:
              name: http
